Add swagger annotations for each API
